# thecatapi-python

./: .gitignore  README.md  pyproject.toml
thecatapi/: __init__.py  cats.py
