[project]
name = "thecatapi-python"
version = "0.1.0"
description = "A simple wrapper for thecatapi."
authors = [
    { name = "lemonkitty" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://api.thecatapi.com"

[tool.setuptools]
packages = ["thecatapi"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"